--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,10 @@
             "email": "abdelhakim.remiki@gmail.com"
         }
     ],
+    "autoload": {
+        "classmap": [
+            "src/"
+        ]
+    },
     "minimum-stability": "dev"
 }
